# javagep

./: LICENSE  README.md
jgep/JavaGEP/: Makefile.in  README  TODO  configure.in
jgep/JavaGEP/cgep/: Makefile  driver.c  gep.c  gep.h  regress.c  regress.h
jgep/JavaGEP/docs/: Makefile.in
jgep/JavaGEP/examples/: Makefile.in  regression.java
jgep/JavaGEP/src/: Makefile.in  tester.java
jgep/JavaGEP/src/jGEP/: ArithmeticIndividual.java  ExpressionNode.java  Fitness.java  GeneticOperators.java  Genome.java  Individual.java  Population.java  RouletteWheelSampler.java  Sampler.java  StochasticUniversalSampler.java
